# Quadcopter-on-K1

./: .gitignore  LICENSE  README.md  setup_ros2.sh  电机装配体.SLDASM
config/: hardware.yaml  params.yaml
docs/: baseinfo.txt
ros2_ws/src/drone_bringup/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/drone_bringup/config/: params.yaml
ros2_ws/src/drone_bringup/launch/: drone.launch.py
ros2_ws/src/drone_communication/: package.xml  setup.py
ros2_ws/src/drone_communication/drone_communication/: mavlink_node.py
ros2_ws/src/drone_inference/: package.xml  setup.py
ros2_ws/src/drone_inference/drone_inference/: inference_node.py
ros2_ws/src/drone_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/drone_interfaces/msg/: Detection2D.msg  DroneStatus.msg  InferenceResult.msg
ros2_ws/src/drone_vision/: package.xml  setup.py
ros2_ws/src/drone_vision/drone_vision/: camera_node.py
ros2_ws/src/drone_voice/: package.xml  setup.py
ros2_ws/src/drone_voice/drone_voice/: voice_node.py
scripts/: setup_ros2.sh
tools/: demo.sh  launch_virtual_fc.sh  snap_detect.py  virtual_fc.py
