<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypesets="g"?>
<package format="3">
  <name>drone_inference</name>
  <version>0.1.0</version>
  <description>ONNX model inference node for object/weather detection</description>
  <maintainer email="bianbu@spacemit.com">bianbu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>drone_interfaces</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>drone_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
